tests/semantic/invalid/return_errors/wrong_type.src
fn test() -> int {
    return "hello";
}
